# sql2rdf

./: .clang-tidy  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: CMakeDependencyCheck.yml  cmake-multi-platform.yml
cmake/: Dependencies.cmake
doc/: api.md
include/r2rml/: AbstractMap.h  BaseTableOrView.h  ColumnTermMap.h  ConstantTermMap.h  DuckDBConnection.h  GraphMap.h  JoinCondition.h  LogicalTable.h  MapSQLRow.h  MappingParser.h  ObjectMap.h  PredicateMap.h  PredicateObjectMap.h  R2RMLMapping.h  R2RMLParser.h  R2RMLView.h  ReferencingObjectMap.h  SQLConnection.h  SQLResultSet.h  SQLRow.h  SQLValue.h  StringSQLValue.h  SubjectMap.h  TemplateTermMap.h  TermMap.h  TriplesMap.h
include/sparql-parser/: Lexer.h  ParseError.h  Parser.h  PrettyPrinter.h  Token.h
include/sparql-parser/ast/: Expression.h  GraphPattern.h  Path.h  Query.h  Term.h
include/sparql2sql/: DialectFactory.h  DuckDbDialect.h  ExpressionTranslator.h  PatternFolder.h  SqlDialect.h  TemplateUtil.h  TermMapSql.h  TranslatedPattern.h  TranslationError.h  Translator.h  TriplePatternTranslator.h
include/yarrrml/: YARRRMLParser.h
research/: table_extension_research.md
src/: DuckDBConnection.cpp  DuckDBConnection.h  main.cpp
src/r2rml/: AbstractMap.cpp  BaseTableOrView.cpp  ColumnTermMap.cpp  ConstantTermMap.cpp  DuckDBConnection.cpp  GraphMap.cpp  JoinCondition.cpp  LogicalTable.cpp  MapSQLRow.cpp  ObjectMap.cpp  PredicateMap.cpp  PredicateObjectMap.cpp  R2RMLMapping.cpp  R2RMLParser.cpp  R2RMLView.cpp  ReferencingObjectMap.cpp  SQLConnection.cpp  SQLResultSet.cpp  SQLRow.cpp  SQLValue.cpp  StringSQLValue.cpp  SubjectMap.cpp  TemplateTermMap.cpp  TermMap.cpp  TriplesMap.cpp  r2rml_scaffolding.cpp
src/sparql-parser/: Ast.cpp  Lexer.cpp  ParseError.cpp  Parser.cpp  ParserExpressions.cpp  ParserGraphPatterns.cpp  ParserPaths.cpp  PrettyPrinter.cpp
src/sparql2sql/: DialectFactory.cpp  DuckDbDialect.cpp  ExpressionTranslator.cpp  PatternFolder.cpp  SqlDialect.cpp  TemplateUtil.cpp  TermMapSql.cpp  TranslatedPattern.cpp  TranslationError.cpp  Translator.cpp  TriplePatternTranslator.cpp
src/yarrrml/: MappingParserFactory.cpp  YARRRMLParser.cpp
tests/: MockSQL.h  r2rmltest.db  test_coverage_gaps.cpp  test_process_database.cpp  test_r2rml.cpp  test_relative_mapping_path.cpp  test_sparql2sql_expressions.cpp  test_sparql2sql_fold.cpp  test_sparql2sql_modifiers.cpp  test_sparql2sql_termmap.cpp  test_sparql2sql_triple_pattern.cpp  test_sparql_errors.cpp  test_sparql_expressions.cpp  test_sparql_lexer.cpp  test_sparql_paths.cpp  test_sparql_patterns.cpp  test_sparql_printer.cpp  test_sparql_query_forms.cpp  test_sparql_solution_modifiers.cpp  test_yarrrml.cpp
tests/duckdb/: test_sparql2sql_duckdb.cpp
tests/sourceR2RML/: example1.ttl  example2.ttl  example3.ttl  example4.ttl  example5.ttl  example_emp_dept.ttl  inside_out_valid.ttl  inside_out_with_rom.ttl  invalid_template_subject.ttl  invalid_turtle_unclosed_literal.ttl  invalid_turtle_undeclared_prefix.ttl  parser_full_forms.ttl  relative_base_predicate.ttl  sparql2sql_constant_pom.ttl  sparql2sql_multi_placeholder.ttl  sparql2sql_self_ref.ttl  typed_columns.ttl  typed_columns_with_static_datatype.ttl  valid_r2rml_empty_object_map.ttl  valid_r2rml_literal_pom.ttl  valid_r2rml_literal_predicate.ttl  valid_r2rml_unresolved_parent.ttl  valid_r2rml_wrong_logical_table_pred.ttl  valid_rdf_no_r2rml_predicates.ttl
tests/sourceSPARQL/: ask_query.rq  bind_values.rq  collection_and_blank_node_property_list.rq  construct_template.rq  describe_query.rq  expressions_builtins.rq  invalid_bad_iriref.rq  invalid_incomplete_property_path.rq  invalid_unbalanced_brace.rq  invalid_unknown_keyword.rq  invalid_unterminated_string.rq  invalid_values_arity_mismatch.rq  minus_pattern.rq  optional_pattern.rq  property_paths.rq  simple_select.rq  solution_modifiers.rq  subquery.rq
tests/sourceSPARQL2SQL/: emp_dept_aggregate.rq  emp_dept_ask.rq  emp_dept_class.rq  emp_dept_join.rq  emp_dept_minus.rq  emp_dept_minus_novars.rq  emp_dept_optional.rq  emp_dept_simple_select.rq  emp_dept_subquery.rq  emp_dept_union.rq  emp_dept_union_mismatched.rq  emp_dept_values.rq  sparql2sql_constant_pom.rq  sparql2sql_multi_placeholder.rq  sparql2sql_self_ref.rq  unsupported_construct.rq  unsupported_graph.rq  unsupported_property_path.rq
tests/sourceYARRRML/: aliases.yml  constant_literal.yml  curie_abuts_column.yml  datatype_language.yml  dollar_escape.yml  example1.yml  example2.yml  example4.yml  example5.yml  example_emp_dept.yml  graphs_warning.yml  invalid_yaml.yml  iri_suffix.yml  missing_mappings.yml  multiple_sources_warning.yml  named_sources.yml  prefixed_templates.yml  quoted_literal_value.yml  relative_base_predicate.yml  sql_query_escaping.yml  unknown_condition_function.yml
